@@ -31,8 +31,43 @@
 
 		
 
-
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>2.5</version>
+    
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-install-plugin</artifactId>
+    <version>2.3.1</version>
+</dependency>
 	</dependencies>
+<<<<<<< HEAD
 
 
+=======
+<build>
+		<plugins>
+		
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugins</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m-XX:MaxPermSize=256</argLine>
+				</configuration>
+			
+			
+			</plugin>
+		</plugins>
+	
+	
+	
+	</build>
+>>>>>>> branch 'master' of https://github.com/salc1997/TIMP_R1.git
 </project>
